@@ -187,7 +187,19 @@
       (e/when-safari (e/wait 3))
       (-> e/get-url
           (str/ends-with? "?login=1test2+A&password=&message=")
-          is))))
+          is)))
+  (testing "fill active human"
+    (doto *driver*
+      (e/click :simple-input)
+      (e/fill-active-human "MyLogin2")
+      (e/click :simple-password)
+      (e/fill-active-human "MyPassword2")
+      (e/click :simple-textarea)
+      (e/fill-active "Some text 2")
+      (e/click :simple-submit)
+      (e/when-safari (e/wait 3)))
+    (is (str/ends-with? (e/get-url *driver*)
+                        "?login=MyLogin2&password=MyPassword2&message=Some+text+2"))))
 
 (deftest test-unicode-bmp-input
   (let [data {:simple-input "ĩṋṗṵţ"
